# neural-tts

./: .gitignore  ARCHITECTURE.md  DELIVERY_SUMMARY.md  FILE_LISTING.md  GITHUB_GUIDE.md  INFERENCE_GUIDE.md  PROJECT_SUMMARY.md  PYPI_GUIDE.md  QUICK_START.md  README.md  TRAINING_GUIDE.md  __init__.py  cli.py  publish.py  pyproject.toml  requirements.txt  setup_verify.py  upload_github.py
config/: __init__.py  acoustic_config.py  training_config.py  vocoder_config.py
data/: __init__.py  dataset.py  preprocessing.py
examples/: example_multilingual.py  example_synthesis.py  example_voice_cloning.py
inference/: __init__.py  synthesizer.py  voice_cloner.py
models/: __init__.py
models/acoustic/: __init__.py  fastspeech2.py  transformer.py  variance_adaptor.py
models/speaker/: __init__.py  encoder.py
models/vocoder/: __init__.py  discriminator.py  hifigan.py
tests/: conftest.py  test_inference.py  test_models.py  test_text.py
text/: __init__.py  normalizer.py  phonemizer.py  symbols.py
training/: __init__.py  losses.py  train_acoustic.py  train_vocoder.py
utils/: __init__.py  audio.py  tools.py
