[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-tts"
version = "1.0.0"
description = "Production-grade neural TTS with extreme clarity, voice cloning, and multilingual support"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["tts", "text-to-speech", "speech-synthesis", "voice-cloning", "neural-tts", "fastspeech2", "hifigan"]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "resampy>=0.4.2",
    "unidecode>=1.3.6",
    "inflect>=6.0.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.14.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "tensorboard>=2.13.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
phonemizer = [
    "phonemizer>=3.2.1",
]
onnx = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/neural-tts"
Documentation = "https://github.com/yourusername/neural-tts#readme"
Repository = "https://github.com/yourusername/neural-tts"
Issues = "https://github.com/yourusername/neural-tts/issues"

[project.scripts]
neural-tts = "cli:main"

[tool.setuptools]
py-modules = ["cli", "__init__"]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "text*", "models*", "data*", "training*", "inference*", "utils*", "examples*"]
